--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
   "author": "Justin McMurdie",
   "license": "ISC",
   "dependencies": {
-    "@reach/router": "1.2.1",
     "@fortawesome/fontawesome-free": "5.7.2",
     "@scality/core-ui": "github:scality/core-ui.git#cdef38f",
     "polished": "3.4.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-debounce-input": "3.2.0",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.1.0",
+    "react-router-dom": "^5.1.0",
     "react-virtualized": "9.21.0",
     "react-select": "3.0.3",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.2",
     "vega": "^5.7.3",
     "vega-embed": "^6.0.0",
