--- a/people/package.json
+++ b/people/package.json
@@ -14,7 +14,9 @@
     "query-string": "6.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "single-spa-react": "2.8.1"
+    "single-spa-react": "2.8.1",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
