--- a/planets/package.json
+++ b/planets/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "rxjs": "6.3.3",
-    "single-spa-react": "^2.10.2"
+    "single-spa-react": "^2.10.2",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
