--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "install:fetchWithCache": "cd ./fetchWithCache/ && npm i",
     "audit-fix": "npm run audit-fix:config && npm run audit-fix:people && npm run audit-fix:planets && npm run audit-fix:fetchWithCache",
     "start": "concurrently --kill-others --kill-others-on-fail -p name --names \"config,common-deps,people,planets,fetchWithCache\" \"npm run start:config\" \"npm run start:common-deps\" \"npm run start:people\" \"npm run start:planets\" \"npm run start:fetchWithCache\"",
-    "start:config": "webpack-dev-server --config ./webpack.config.config.dev.js --port 8233",
+    "start:config": "NODE_ENV=development webpack-dev-server --config ./webpack.config.config.dev.js --port 8233",
     "start:common-deps": "webpack-dev-server --config ./webpack.common-deps.config.dev.js --port 8234",
-    "start:people": "cd ./people/ && webpack-dev-server --config ./webpack.dev.js --port 8236",
-    "start:planets": "cd ./planets/ && webpack-dev-server --config ./webpack.dev.js --port 8237",
+    "start:people": "cd ./people/ && NODE_ENV=development webpack-dev-server --config ./webpack.dev.js --port 8236",
+    "start:planets": "cd ./planets/ && NODE_ENV=development webpack-dev-server --config ./webpack.dev.js --port 8237",
     "start:fetchWithCache": "cd ./fetchWithCache/ && webpack-dev-server --config ./webpack.dev.js --port 8238",
     "build": "npm run build:config && npm run build:common-deps && npm run build:fetchWithCache",
     "build:config": "webpack --config ./webpack.config.config.js -p",
@@ -38,6 +38,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-debounce-input": "3.2.0",
+    "react-loadable": "^5.4.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
@@ -47,13 +48,15 @@
     "styled-components": "^4.1.2",
     "vega": "^5.7.3",
     "vega-embed": "^6.0.0",
-    "vega-lite": "^4.0.0-beta.10"
+    "vega-lite": "^4.0.0-beta.10",
+    "single-spa": "4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "7.7.0",
+    "autoprefixer": "9.1.5",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.0",
     "clean-webpack-plugin": "0.1.19",
@@ -68,14 +71,26 @@
     "@fortawesome/fontawesome-free": "5.7.2",
     "@scality/core-ui": "github:scality/core-ui.git#384dc3b",
     "polished": "3.4.1",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "postcss-loader": "3.0.0",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-debounce-input": "3.2.0",
     "react-virtualized": "9.21.0",
     "react-select": "3.0.3",
     "styled-components": "^4.1.2",
     "vega": "^5.7.3",
     "vega-embed": "^6.0.0",
-    "vega-lite": "^4.0.0-beta.10"
+    "vega-lite": "^4.0.0-beta.10",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.1.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/plugin-transform-runtime": "7.8.3",
+    "html-loader": "0.5.5",
+    "webpack-external-import": "2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "write-file-webpack-plugin": "4.5.1"
   }
 }
