--- a/people/package.json
+++ b/people/package.json
@@ -1,5 +1,8 @@
 {
   "name": "people",
+  "interleave": {
+    "src/root.component.js": "Rootpeople"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +19,9 @@
     "react-router-dom": "4.3.1",
     "single-spa-react": "2.8.1",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "rxjs": "6.5.4",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -36,6 +41,8 @@
     "style-loader": "0.23.0",
     "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1",
+    "webpack-external-import": "2.1.1"
   }
 }
