--- a/planets/package.json
+++ b/planets/package.json
@@ -1,5 +1,8 @@
 {
   "name": "planets",
+  "interleave": {
+    "src/root.component.js": "Rootplanets"
+  },
   "version": "1.0.0",
   "description": "A microservice about star wars planets",
   "main": "index.js",
@@ -13,10 +16,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "rxjs": "6.3.3",
+    "rxjs": "6.5.4",
     "single-spa-react": "^2.10.2",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
@@ -34,6 +38,8 @@
     "vue-style-loader": "4.1.2",
     "webpack": "4.20.2",
     "webpack-cli": "3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1",
+    "webpack-external-import": "2.1.1"
   }
 }
