Package.json: use webpack-external-import fork

--- a/people/package.json
+++ b/people/package.json
@@ -17,7 +17,6 @@
     "query-string": "6.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "single-spa-react": "2.8.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "rxjs": "6.5.4",
@@ -43,6 +42,6 @@
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1",
-    "webpack-external-import": "2.1.1"
+    "webpack-external-import": "github:carlito-scality/webpack-external-import.git#microapp-poc"
   }
 }
