--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "styled-components": "^4.1.2",
     "vega": "^5.7.3",
     "vega-embed": "^6.0.0",
-    "vega-lite": "^4.0.0-beta.10",
-    "single-spa": "4.3.2"
+    "vega-lite": "^4.0.0-beta.10"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -89,7 +88,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/plugin-transform-runtime": "7.8.3",
     "html-loader": "0.5.5",
-    "webpack-external-import": "2.1.1",
+    "webpack-external-import": "github:carlito-scality/webpack-external-import.git#microapp-poc",
     "html-webpack-plugin": "^3.2.0",
     "write-file-webpack-plugin": "4.5.1"
   }
