--- a/planets/package.json
+++ b/planets/package.json
@@ -17,7 +17,6 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "rxjs": "6.5.4",
-    "single-spa-react": "^2.10.2",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "axios": "^0.19.0"
@@ -40,6 +39,6 @@
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1",
-    "webpack-external-import": "2.1.1"
+    "webpack-external-import": "github:carlito-scality/webpack-external-import.git#microapp-poc"
   }
 }
